# sphere_mapping

./: .gitignore  README.md  app.connect  my_quaternion.py  my_sphere.py  sphere_app.py
microbit-firmware/: Cargo.toml  Makefile
microbit-firmware/src/: calibration.rs  led.rs  main.rs  serial_setup.rs
src/: my_sphere.py  sphere_app.py
src/utils/: measure.py  quaternion.py  serial_parser.py  sphere.py
